--- a/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
@@ -112,7 +112,7 @@
 
                 </li>
                 <li>
-                    <input type="text" id="txtJobBy" name="field1" class="field-divided" placeholder="" required/>&nbsp;<input type="text" id="txtIssuedBy" name="field1" class="field-divided" placeholder="" required/>
+                    <input type="text" id="txtJobBy" name="field1" class="field-divided" placeholder="" required/>&nbsp;<input type="text" id="txtIssuedBy" name="field1" class="field-divided" placeholder="" disabled required/>
                 </li>
                 <li>
                     <label class="label-5">ชนิดงาน</label>&nbsp;<label class="label-2">Status</label>
