--- a/Alpha/AlphaMvc/Views/JobOrder/EditJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/EditJobOrder.cshtml
@@ -74,7 +74,7 @@
 
             </li>
             <li>
-                <input type="text" id="txtJobBy" name="field1" class="field-divided" placeholder="รับงานโดย" required/>&nbsp;<input type="text" id="txtIssuedBy" name="field1" class="field-divided" placeholder="ออกโดย" required/>
+                <input type="text" id="txtJobBy" name="field1" class="field-divided" placeholder="รับงานโดย" required/>&nbsp;<input type="text" id="txtIssuedBy" name="field1" class="field-divided" placeholder="ออกโดย" disabled  required/>
             </li>
             <li>
                 <label class="label-5">ชนิดงาน</label>&nbsp;<label class="label-2">Status</label>
