--- a/Alpha/AlphaMvc/Views/WageTeachnician/EditWageTeachnician.cshtml
+++ b/Alpha/AlphaMvc/Views/WageTeachnician/EditWageTeachnician.cshtml
@@ -179,6 +179,8 @@
         //ControlEnable(Isview);
 
         GetData(@Request.Params["id"]);
-        GetTotal();
+        //$('.RowCal td:first').click(function () {
+        //    row_index = $(this).parent().index();
+        //});
     });
 </script>
